--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="article-entry" itemprop="articleBody">
       
         <p>OpenRTB概览</p>
-<p>OpenRTB与iab的关系</p>
+<p>OpenRTB与iab的关</p>
 <p>OpenRTB的解决的需求</p>
 <p>OpenRTB初解</p>
 
